// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterWallets > should render 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-6"
    >
      <div
        class="text-theme-secondary-text font-semibold"
      >
        Filter Networks
      </div>
      <div
        class="text-theme-secondary-500 mt-1 text-sm font-semibold"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-2"
    />
    <div
      class="border-theme-secondary-300 dark:border-theme-secondary-800 mt-2 mb-6 border-t border-dotted"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <div
            class="text-theme-secondary-text font-semibold"
          >
            Your Wallets
          </div>
          <div
            class="text-theme-secondary-500 mt-2 pr-12 text-sm font-semibold"
          >
            Select which wallets to view.
          </div>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="text-theme-secondary-text flex cursor-pointer items-center justify-end"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="mr-2 inline-block font-semibold"
            />
            <div
              class="transition-transform"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-down-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FilterWallets > should render with networks selection 1`] = `
<div>
  <div
    class="flex flex-col text-left"
    data-testid="FilterWallets"
  >
    <div
      class="mb-6"
    >
      <div
        class="text-theme-secondary-text font-semibold"
      >
        Filter Networks
      </div>
      <div
        class="text-theme-secondary-500 mt-1 text-sm font-semibold"
      >
        Select the networks to show.
      </div>
    </div>
    <div
      class="space-y-2"
    >
      <div
        data-testid="FilterNetwork"
      >
        <div
          class="text-theme-secondary-700 mb-3 text-sm font-semibold"
        >
          Development Networks
        </div>
        <ul
          class="flex flex-wrap"
          data-testid="NetworkOptions"
        >
          <li
            class="inline-block cursor-pointer pr-4 pb-4"
            data-testid="NetworkOption__mainsail.devnet"
          >
            <div
              class="inline-flex items-center justify-center rounded-full border-2 align-middle transition-all h-11 w-11 px-2 py-1 ring-6 border-theme-secondary-300 dark:border-theme-secondary-800 relative ring-theme-background duration-100"
            >
              <div
                aria-label="Mainsail Devnet"
                class="inline-flex h-5 w-5 items-center justify-center text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700"
                data-testid="NetworkIcon-Mainsail-mainsail.devnet"
              >
                <div
                  class="text-theme-secondary-300"
                  data-testid="NetworkIcon__icon"
                >
                  <div
                    style="height: 20px; width: 20px;"
                  >
                    <svg
                      id="ark"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 36.3 30.6"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <path
                        d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <span
                class="absolute right-0 bottom-0 h-5 w-5 translate-x-1/2 translate-y-1/2 transform shadow-[0_0_0_5px_theme-background] bg-theme-background flex items-center justify-center rounded-full border-2 align-middle border-theme-secondary-300 dark:border-theme-secondary-800"
              >
                <span />
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
    <div
      class="border-theme-secondary-300 dark:border-theme-secondary-800 mt-2 mb-6 border-t border-dotted"
    />
    <div
      class="flex flex-col"
    >
      <div
        class="flex items-center justify-between"
      >
        <div>
          <div
            class="text-theme-secondary-text font-semibold"
          >
            Your Wallets
          </div>
          <div
            class="text-theme-secondary-500 mt-2 pr-12 text-sm font-semibold"
          >
            Select which wallets to view.
          </div>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="dialog"
          data-testid="dropdown__toggle"
        >
          <div
            class="text-theme-secondary-text flex cursor-pointer items-center justify-end"
            data-testid="filter-wallets__wallets"
          >
            <span
              class="mr-2 inline-block font-semibold"
            />
            <div
              class="transition-transform"
            >
              <div
                style="height: 10px; width: 10px;"
              >
                <svg
                  id="chevron-down-small"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 10 10"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <path
                    d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
